# project-templete

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: config.yaml
docs/: visualization.md
notebooks/: run.sh
scripts/: train_template.py
scripts/tools/: generate_overview.py
scripts/visualization/: plot_loss.py
src/data/: dataset.py
src/loss/: base_loss.py
