[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy<2",
  "scipy",
  "transformers",
  "wandb<0.23",
  "natsort",
  "manga-ocr",
  "tensorflow==2.9.0",
  "tensorflow-model-optimization",
  "cairosvg",
  "requests",
  "urllib3",
  "chardet",
  "protobuf<=3.20",
  "svgpathtools",
  "torch==2.5.0",
  "torchvision",
  "omegaconf>=2.3.0",
  "ruff>=0.14.7",
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.7",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
